Two -> a few types of formatting

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="info">
         <h3>Text Formatting Information:</h3>
-        You can use two types of formatting:<br/>
+        You can use a few types of formatting:<br/>
         First, you can use a dash to make the two glyphs in sitelen pona connect.<br/>
         The latin alphabet version will automatically replace a dash with a space.<br>
         Example: <code>toki-pona</code> becomes:<br>
