--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
     <div class="linjapona">
         <h4 class="linjapona">
-            o toki pona...
+            o toki-pona...
         </h4>
     </div>
 
     <!-- Input field for updating content -->
     <label for="userInput"></label>
-    <textarea id="userInput" placeholder="o toki pona..." oninput="translateText(); displayTokiPona()" rows="4"></textarea>
-    <div id="translatedText">o toki pona</div>
+    <textarea id="userInput" placeholder="o toki-pona..." oninput="translateText(); displayTokiPona()" rows="4"></textarea>
+    <div id="translatedText">hey speak Toki Pona</div>
 
     <div class="info">
         <h3>Text Formatting Information:</h3>
