Line breaks in translation

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Input field for updating content -->
     <label for="userInput"></label>
     <textarea id="userInput" placeholder="o toki-pona..." oninput="translateText(); displayTokiPona()" rows="4"></textarea>
-    <div id="translatedText">hey speak Toki Pona</div>
+    <div class="translatedText"><p id="translatedText">hey speak Toki Pona</p></div>
 
     <div class="info">
         <h3>Text Formatting Information:</h3>
